[package]
name = "rsomics-pdb-chain"
version = "0.1.0"
description = "Extract or split PDB chains — list, extract single chain, or split all into separate files"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-pdb-chain"
path = "src/main.rs"

[lib]
name = "rsomics_pdb_chain"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

